Fix layout issue

--- a/oceannavigator/frontend/src/stylesheets/components/_MapToolbar.scss
+++ b/oceannavigator/frontend/src/stylesheets/components/_MapToolbar.scss
@@ -9,7 +9,7 @@
         height: calc(#{$toolbar-height} - 0.2em);
     }
 
-    > div, > button {
+    > div, > button, > span {
         margin: 0.25em;
     }
 
